add preEmptiveApologyLetter
