# src/main/kotlin/ch/ejpd/example/precrime/infrastructure/integration/persistence/PreApologyConfiguration.kt
@@ -1,0 +1,14 @@
+package ch.ejpd.example.precrime.infrastructure.integration.persistence
+
+import ch.ejpd.example.precrime.domain.apology.PreEmptiveApologyService
+import org.springframework.context.annotation.Bean
+import org.springframework.context.annotation.Configuration
+
+@Configuration
+class PreApologyConfiguration {
+
+    @Bean
+    fun preEmptiveApologyService(): PreEmptiveApologyService {
+        return PreEmptiveApologyService()
+    }
+}
